--- a/Makefile.debug
+++ b/Makefile.debug
@@ -1,15 +1,18 @@
-OBJECTS= obj/br_cmd.o obj/clock.o obj/conf_file.o obj/debug.o obj/debug_menu.o obj/dnc.o obj/dnc_menu.o obj/x10dev.o
+OBJECTS= obj/br_cmd.o obj/clock.o obj/conf_file.o obj/conversion.o obj/debug.o obj/debug_menu.o obj/dnc.o obj/dnc_menu.o obj/x10dev.o
 
 default: bin/garden_debug
 
 obj/br_cmd.o: br/br_cmd.c
 	g++ br/br_cmd.c -c -o obj/br_cmd.o
 
-obj/clock.o: clock.cpp conversion.h
+obj/clock.o: clock.cpp
 	g++ clock.cpp -c -o obj/clock.o
 
 obj/conf_file.o: conf_file.cpp
 	g++ conf_file.cpp -c -o obj/conf_file.o -std=c++11
+
+obj/conversion.o: conversion.cpp
+	g++ conversion.cpp -c -o obj/conversion.o
 
 obj/debug.o: debug.cpp
 	g++ debug.cpp -c -o obj/debug.o
@@ -30,6 +33,6 @@ bin/garden_debug: $(OBJECTS)
 	g++ $(OBJECTS) -o bin/garden_debug -lmenu -lncurses
 
 clean:
-	-rm -f *.o
+	-rm -f obj/*.o
 	-rm -f bin/garden_debug
 
